packages/next-swc/crates/core/tests/errors/react-server-components/client-graph/use-client/output.js
import 'react';
export default function() {
    return null;
}
